# MobileGnuplotViewerQuick

./: AboutDialog.qml  AboutDialogForm.ui.qml  AboutForm.ui.qml  ApplicationStore.qml  CMakeLists.txt  DummyPage.qml  DummyPageFormular.ui.qml  FindDialog.qml  FindDialogForm.ui.qml  GnuplotViewerQuick.pro  GnuplotViewerQuick_de_DE.qm  GnuplotViewerQuick_de_DE.ts  GnuplotViewerQuick_es_ES.qm  GnuplotViewerQuick_es_ES.ts  GnuplotViewerQuick_fr_FR.qm  GnuplotViewerQuick_fr_FR.ts  GnuplotViewerQuick_nl_NL.qm  GnuplotViewerQuick_nl_NL.ts  HISTORY.txt  Home.qml  HomeForm.ui.qml  MobileFileDialog.qml  MobileFileDialog.ui.qml  MobileFileDialogForm.ui.qml  Page1Form.ui.qml  Page2Form.ui.qml  PageGraphics.qml  PageGraphicsForm.ui.qml  PageHelp.qml  PageHelpForm.ui.qml  PageHome.qml  PageHomeForm.ui.qml  PageOutput.qml  PageOutputForm.qml  PageOutputForm.ui.qml  README.md  ReplaceDialog.qml  ReplaceDialogForm.ui.qml  SaveAsDialog.qml  SaveAsDialogForm.ui.qml  (+26 more)
.github/workflows/: Linux.yml  MacOS.yml  Windows.yml  wasm.yml
QtAndroidTools/: CMakeLists.txt  QAndroidAdMobBanner.cpp  QAndroidAdMobBanner.h  QAndroidAdMobInterstitial.cpp  QAndroidAdMobInterstitial.h  QAndroidAdMobRewardedAd.cpp  QAndroidAdMobRewardedAd.h  QAndroidApkInfo.cpp  QAndroidApkInfo.h  QAndroidAudio.cpp  QAndroidAudio.h  QAndroidBatteryState.cpp  QAndroidBatteryState.h  QAndroidGoogleAccount.cpp  QAndroidGoogleAccount.h  QAndroidGoogleDrive.cpp  QAndroidGoogleDrive.h  QAndroidImages.cpp  QAndroidImages.h  QAndroidNotification.cpp  QAndroidNotification.h  QAndroidPlayStore.cpp  QAndroidPlayStore.h  QAndroidScreen.cpp  QAndroidScreen.h  QAndroidSharing.cpp  QAndroidSharing.h  QAndroidSignalStrength.cpp  QAndroidSignalStrength.h  QAndroidSystem.cpp  QAndroidSystem.h  QAndroidUserMessagingPlatform.cpp  QAndroidUserMessagingPlatform.h  QtAndroidTools.cpp  QtAndroidTools.h
QtAndroidTools/src/com/falsinsoft/qtandroidtools/: AndroidAdMob.java  AndroidAdMobBanner.java  AndroidAdMobInterstitial.java  AndroidAdMobRewardedAd.java  AndroidAudio.java  AndroidBatteryState.java  AndroidGoogleAccount.java  AndroidGoogleDrive.java  AndroidImages.java  AndroidNotification.java  AndroidPlayStore.java  AndroidScreen.java  AndroidSignalStrength.java  AndroidSystem.java  AndroidUserMessagingPlatform.java
android/: AndroidManifest.xml  androidshareutils.cpp  androidshareutils.hpp  build.gradle
android/res/xml/: filepaths.xml
android/src/com/falsinsoft/qtandroidtools/: AndroidSharing.java  AndroidTools.java
android/src/de/mneuroth/activity/sharex/: QShareActivity.jav_  QShareActivity.java
android/src/de/mneuroth/utils/: QSharePathResolver.jav_  QShareUtils.java  QStorageAccess.java  Tuple.jav_
android/src/org/qtproject/qt/android/purchasing/: InAppPurchase.java
files/: faq.txt  gnuplot.gih  gnuplotviewer_license.txt
files/scripts/: butterfly.gpt  default.gpt  fitdata.gpt  multiplot.gpt  simple.gpt  splot.gpt
gnuplot/: config.h  gnuplot.pri
gnuplot/src/: axis.c  bitmap.c  boundary.c  breaders.c  color.c  command.c  contour.c  datafile.c  eval.c  fit.c  getcolor.c  gpexecute.c  graph3d.c  graphics.c  help.c  hidden3d.c  history.c  internal.c  interpol.c  jitter.c  misc.c  multiplot.c  parse.c  plot.c  plot2d.c  plot3d.c  pm3d.c  readline.c  save.c  set.c  show.c  specfun.c  stats.c  stdfn.c  stdfn.h  strftime.c  syscfg.h  tabulate.c  term.c  term_api.h  (+6 more)
ios/: Info.plist
purchasing/: purchasing.pri
purchasing/android/: androidinapppurchasebackend.cpp  androidinapppurchasebackend.h  androidjni.cpp  build.gradle
purchasing/android/src/org/qtproject/qt/android/purchasing/: Base64.java  Base64DecoderException.java
purchasing/inapp/: dummyinapppurchasebackend.cpp  dummyinapppurchasebackend.h  inappstore.cpp
